Some minor touch up around the site

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -4,77 +4,123 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>{{ block "title" . }}{{ .Site.Title }}{{ end }}</title>
+    <title>{{ .Title }} - {{ .Site.Title }}</title>
 
-    <meta name="description" content="{{ .Description | default (.Summary | default .Site.Params.description ) }}" />
-    <meta name="keywords" content="{{ (delimit .Keywords ",") | default .Site.Params.keywords }}" />
+    <meta
+      name="description"
+      content="{{ .Description | default (.Summary | default .Site.Params.description ) }}"
+    />
+    <meta name="keywords" content="{{ (delimit .Keywords ",") | default
+    .Site.Params.keywords }}" />
 
     <!-- Fonts -->
-    <link rel="preconnect" href="https://fonts.gstatic.com" /> 
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&display=swap" rel="stylesheet" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&display=swap"
+      rel="stylesheet"
+    />
 
     <!-- Open Graph -->
     <meta property="og:url" content="https://www.ardent-guild.com/" />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Ardent Guild" />
-    <meta property="og:description" content="An alliance mythic raiding guild on Sargeras. Focused on pushing Cutting Edge." />
-    <meta property="og:image" content="https://www.ardent-guild.com/images/ardent-logo-first-draft.png" />
+    <meta
+      property="og:description"
+      content="An alliance mythic raiding guild on Sargeras. Focused on pushing Cutting Edge."
+    />
+    <meta
+      property="og:image"
+      content="https://www.ardent-guild.com/images/ardent-logo-first-draft.png"
+    />
 
     <!-- Twitter Meta Tags -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta property="twitter:domain" content="" />
     <meta property="twitter:url" content="https://www.ardent-guild.com/" />
     <meta name="twitter:title" content="Ardent Guild" />
-    <meta name="twitter:description" content="An alliance mythic raiding guild on Sargeras. Focused on pushing Cutting Edge." />
-    <meta name="twitter:image" content="https://www.ardent-guild.com/images/ardent-logo-first-draft.png" />
+    <meta
+      name="twitter:description"
+      content="An alliance mythic raiding guild on Sargeras. Focused on pushing Cutting Edge."
+    />
+    <meta
+      name="twitter:image"
+      content="https://www.ardent-guild.com/images/ardent-logo-first-draft.png"
+    />
 
     <!-- Google Analytics -->
-    {{ if and (hugo.IsProduction) (.Site.GoogleAnalytics) }}
-      {{ template "_internal/google_analytics.html" . }}
-    {{ end }}
-    
+    {{ if and (hugo.IsProduction) (.Site.GoogleAnalytics) }} {{ template
+    "_internal/google_analytics.html" . }} {{ end }}
+
     <!-- Wowhead Tooltips -->
-    <script>const whTooltips = {colorLinks: true, iconizeLinks: true, renameLinks: true};</script>
+    <script>
+      const whTooltips = {
+        colorLinks: true,
+        iconizeLinks: true,
+        renameLinks: true,
+      };
+    </script>
     <script src="https://wow.zamimg.com/widgets/power.js"></script>
 
-    {{ $styles := resources.Get "scss/main.scss" }}
+    {{ $styles := resources.Get "scss/main.scss" }} {{ if .Site.IsServer }} {{
+    $cssOpts := (dict "targetPath" "css/main.css" "enableSourceMap" true ) }} {{
+    $styles := $styles | resources.ToCSS $cssOpts | resources.PostCSS }}
 
-    {{ if .Site.IsServer }}
-      {{ $cssOpts := (dict "targetPath" "css/main.css" "enableSourceMap" true ) }}
-      {{ $styles := $styles | resources.ToCSS $cssOpts | resources.PostCSS }}
+    <link rel="stylesheet" href="{{ $styles.RelPermalink }}" media="screen" />
+    {{ else }} {{ $cssOpts := (dict "targetPath" "css/main.css" ) }} {{ $styles
+    := $styles | resources.ToCSS $cssOpts | resources.PostCSS | minify |
+    fingerprint | resources.PostProcess }}
 
-      <link rel="stylesheet" href="{{ $styles.RelPermalink }}" media="screen">
-    {{ else }}
-      {{ $cssOpts := (dict "targetPath" "css/main.css" ) }}
-      {{ $styles := $styles | resources.ToCSS $cssOpts | resources.PostCSS | minify | fingerprint | resources.PostProcess }}
+    <link
+      rel="stylesheet"
+      href="{{ $styles.RelPermalink }}"
+      integrity="{{ $styles.Data.Integrity }}"
+      crossorigin="anonymous"
+      media="screen"
+    />
+    {{ end }} {{/* <link rel="icon" type="image/png" href="{{
+    .Site.Params.favicon_32 | default "/favicon-32x32.png" | relURL }}"
+    sizes="32x32"> <link rel="icon" type="image/png" href="{{
+    .Site.Params.favicon_16 | default "/favicon-16x16.png" | relURL }}"
+    sizes="16x16"> <link rel="apple-touch-icon" href="{{ .Site.Params.touchicon
+    | default "/apple-touch-icon.png" | relURL }}"> <link rel="apple-touch-icon"
+    sizes="180x180" href="{{ .Site.Params.touchicon | default
+    "/apple-touch-icon.png" | relURL }}"> */}}
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
 
-      <link rel="stylesheet" href="{{ $styles.RelPermalink }}" integrity="{{ $styles.Data.Integrity }}" crossorigin="anonymous" media="screen" />
-    {{ end }}
+    <link rel="manifest" href="/site.webmanifest" />
 
-    
-    {{/*  <link rel="icon" type="image/png" href="{{ .Site.Params.favicon_32 | default "/favicon-32x32.png" | relURL }}" sizes="32x32">
-    <link rel="icon" type="image/png" href="{{ .Site.Params.favicon_16 | default "/favicon-16x16.png" | relURL }}" sizes="16x16">
-    
-    <link rel="apple-touch-icon" href="{{ .Site.Params.touchicon | default "/apple-touch-icon.png" | relURL }}">
-    <link rel="apple-touch-icon" sizes="180x180" href="{{ .Site.Params.touchicon | default "/apple-touch-icon.png" | relURL }}">  */}}
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-    
-    <link rel="manifest" href="/site.webmanifest">
-
-    <script src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.x.x/dist/alpine.min.js" defer></script>
+    <script
+      src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.x.x/dist/alpine.min.js"
+      defer
+    ></script>
   </head>
 
   <body class="dark:bg-gray-700 dark:text-gray-200 bg-gray-700 text-gray-200">
     {{ partial "header" . }}
 
-    <main class="main flex flex-col md:flex-row w-full md:border-r border-gray-900">
-      <section class="sidebar bg-gray-900 flex-none w-full md:w-80 border-r border-black" style="background-color: #2c2c2c;">
+    <main
+      class="main flex flex-col md:flex-row w-full md:border-r border-gray-900"
+    >
+      <section
+        class="
+          sidebar
+          bg-gray-900
+          flex-none
+          w-full
+          md:w-80
+          border-r border-black
+        "
+        style="background-color: #2c2c2c"
+      >
         {{ partial "sidebar.html" . }}
       </section>
-      
-      <section class="content flex-auto bg-gray-800" style="background-color: #484848;">
+
+      <section
+        class="content flex-auto bg-gray-800"
+        style="background-color: #484848"
+      >
         <section class="main-content p-5">
           {{ block "main" . }}{{ end }}
         </section>
@@ -85,19 +131,54 @@
 
     <!-- Alpine Modal Component -->
     <div x-data="{ show: false, src : '', title : '' }">
-      <template @img-modal.window="show = true; src = $event.detail.src; title = $event.detail.title;" x-if="show">
-        <div x-on:keydown.escape.window="show = false" @click="show = false" x-transition:enter="transition ease-out duration-300" x-transition:enter-start="opacity-0 transform scale-90" x-transition:enter-end="opacity-100 transform scale-100" x-transition:leave="transition ease-in duration-300" x-transition:leave-start="opacity-100 transform scale-100" x-transition:leave-end="opacity-0 transform scale-90" class="p-2 fixed w-full h-100 inset-0 z-50 overflow-hidden flex justify-center items-center bg-black bg-opacity-75">
+      <template
+        @img-modal.window="show = true; src = $event.detail.src; title = $event.detail.title;"
+        x-if="show"
+      >
+        <div
+          x-on:keydown.escape.window="show = false"
+          @click="show = false"
+          x-transition:enter="transition ease-out duration-300"
+          x-transition:enter-start="opacity-0 transform scale-90"
+          x-transition:enter-end="opacity-100 transform scale-100"
+          x-transition:leave="transition ease-in duration-300"
+          x-transition:leave-start="opacity-100 transform scale-100"
+          x-transition:leave-end="opacity-0 transform scale-90"
+          class="
+            p-2
+            fixed
+            w-full
+            h-100
+            inset-0
+            z-50
+            overflow-hidden
+            flex
+            justify-center
+            items-center
+            bg-black bg-opacity-75
+          "
+        >
           <div class="flex flex-col max-w-full w-4/5 max-h-full overflow-auto">
             <div class="z-50">
-              <button @click="show = false" class="float-right pt-2 pr-2 outline-none focus:outline-none">
-                <svg class="fill-current text-white " xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18">
-                  <path d="M14.53 4.53l-1.06-1.06L9 7.94 4.53 3.47 3.47 4.53 7.94 9l-4.47 4.47 1.06 1.06L9 10.06l4.47 4.47 1.06-1.06L10.06 9z">
-                  </path>
+              <button
+                @click="show = false"
+                class="float-right pt-2 pr-2 outline-none focus:outline-none"
+              >
+                <svg
+                  class="fill-current text-white"
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="18"
+                  height="18"
+                  viewBox="0 0 18 18"
+                >
+                  <path
+                    d="M14.53 4.53l-1.06-1.06L9 7.94 4.53 3.47 3.47 4.53 7.94 9l-4.47 4.47 1.06 1.06L9 10.06l4.47 4.47 1.06-1.06L10.06 9z"
+                  ></path>
                 </svg>
               </button>
             </div>
             <div class="p-2">
-              <img :alt="src" class="object-contain w-full" :src="src">
+              <img :alt="src" class="object-contain w-full" :src="src" />
               <p x-text="title" class="text-center text-white"></p>
             </div>
           </div>
