--- a/layouts/partials/featured.html
+++ b/layouts/partials/featured.html
@@ -7,15 +7,23 @@
 
   <div class="flex-auto"></div>
 
-  <section class="bg-black bg-opacity-60 rounded-b-lg">
+  <section class="bg-black opacity-60 rounded-b-lg">
     <h3 class="title text-blue-400 mb-0 p-3 tracking-tight text-xl block font-bold truncate" title="{{ .name }}">
       {{ .name }}
     </h3>
 
+    {{ if .logs }}
+      <div class="text-right px-2">
+        <a title="Warcraft Logs" class="inline-block" href="{{ .logs }}" target="_blank">
+          <img class="m-0 inline-block" src="/images/external/warcraft-logs.png" alt="Warcraft Logs" width="24" />
+        </a>
+      </div>
+    {{ end }}
+
     {{ if .killedAt }}
-    <div class="metadata italic tracking-wider font-light text-right p-2">
+      <div class="metadata italic tracking-wider font-light text-right p-2">
         Downed on <span class="timestamp font-semibold">{{ dateFormat "January 2, 2006" .killedAt }}</span>
       </div>
-      {{ end }}
+    {{ end }}
   </section>
 </article>
